# GIC

./: .gitignore  README.md  pyproject.toml
configs/: base.yaml  paths.yaml
docs/: GIC_project_phase_roadmap_v1.md  GIC_project_planning_and_technical_route_v1.md  phase_0_detailed_plan.md  phase_1_detailed_plan.md  phase_2_detailed_plan.md  phase_3_detailed_plan.md  phase_4_detailed_plan.md  phase_5_detailed_plan.md  phase_6_detailed_plan.md  phase_7_detailed_plan.md  phase_8_detailed_plan.md
scripts/: graphsage_svg_gen.py  phase0_dry_run.sh  phase5_followup_runner.py  phase5_formal_matrix.py  phase6_optimization_matrix.py  vis_refactor_v2.py  web_viz_gen.py
tests/: conftest.py  test_cli.py  test_config.py  test_data_schema.py  test_evidence_levels.py  test_fastica_frontend.py  test_field_projection.py  test_final_configs.py  test_final_pipeline.py  test_final_visualization_exports.py  test_gcn_baseline.py  test_generalization_splits.py  test_graph_builder.py  test_graph_export.py  test_graph_schema.py  test_hotspot_head.py  test_intermagnet_parser.py  test_kg_builder.py  test_kg_cli.py  test_kg_feature_derivation.py  test_kg_fusion.py  test_kg_rules.py  test_kg_schema.py  test_loss_composer.py  test_lowfreq_frontend.py  test_main_model.py  test_main_training_loop.py  test_mlp_baseline.py  test_parsers.py  test_phase4_real_feature_alignment.py  test_phase5_cli.py  test_physics_builder.py  test_physics_fusion.py  test_physics_schema.py  test_real_eval_pipeline.py  test_real_event_schema.py  test_registry.py  test_reproduction_pipeline.py  test_robustness_configs.py  (+11 more)
(+480 files in other folders)
